--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>ADEL</title>
+    <title>UNTUK ADEL</title>
 </head>
 <body>
     <div class="greetings">
@@ -19,14 +19,20 @@
         <span>G</span>
         <span>A</span>
         <span>T</span>
+        <span>&MediumSpace;</span>
+        <span>A</span>
+        <span>D</span>
+        <span>E</span>
+        <span>L</span>
+        
 
     </div>
     <div class="description">
-        <span>Aku ada hadiah!!</span>
+        <span>COBA LIAT DULU DEHH<3 </span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">click here <3 </a>
         </button>
         
     </div>
